# RustHotswapExample

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  current_task.md  next_task.md
.cargo/: config.toml
.claude/: settings.local.json
server_hotswap_example/: Cargo.toml
server_hotswap_example/src/: main.rs
wasm_hotswap_example/: Cargo.toml  Dioxus.toml  index.html
wasm_hotswap_example/public/: my_style.css
wasm_hotswap_example/src/: main.rs
wasm_mt_hotswap_example/: .gitignore  CLAUDE.md  Cargo.toml  index.html  next_task.md
wasm_mt_hotswap_example/.cargo/: config.toml
wasm_mt_hotswap_example/public/: index.js  worker.js
wasm_mt_hotswap_example/src/: main.rs  pool.rs  utils.rs  web_mutex.rs  web_worker_manager.rs
