[package]
name = "wasm_hotswap_example"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Location",
    "CloseEvent",
    "MessageEvent",
    "WebSocket"
] }

dioxus-devtools = "0.7.0-rc.1"
crossbeam-channel = "0.5.15"
send_wrapper = "0.6.0"
dioxus-cli-config = { version = "0.7.0-rc.1", features = ["web"] }
serde_json = { version = "1.0" }

#[features]
#default = ["web"]
#web = ["dioxus/web"]